--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=devopstrainingblr@gmail.com
+email=malleshgouda.sanka13@gmail.com
 #always-auth=true
 #_auth=amVua2luczpTYW5rYUAxMjM=
 //registry.npmjs.org/:_auth=YWRtaW46cGFzc3cwcmQ=
