--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "nodejsexamples",
   "version": "1.0.0",
   "description": "This Project explains all Node JS examples",
-  "main": "app.js",
+  "main": "app.js",  
+  "publishConfig":{
+      "registry": "http://15.207.223.81:8085/repository/Nodejsmallesh/"
+},
+
   "scripts": {
     "server": "http-server -c-1 -p 9999",
     "start1": "nodemon app.js",
@@ -21,10 +25,7 @@
   "engines": {
     "node": "v10.6.0"
   },
-  "repository": {
-    "type": "git",
-    "url": " http://15.207.223.81:8085/repository/Nodejsmallesh/ "
-  },
+  
   "keywords": [
     "node",
     "Mithun Technologies",
