--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/malleshgouda/nodejs-app-mss.git:
+    "url": "https://github.com/malleshgouda/nodejs-app-mss.git"
   },
   "keywords": [
     "node",
